--- a/src/components/AppStore/index.css
+++ b/src/components/AppStore/index.css
@@ -2,28 +2,66 @@
 .container {
   display: 'flex';
   flex-direction: column;
-  align-items: center;
+  align-content: center;
+  text-align: center;
   padding: 20px;
-  height: 100vh;
-  background-color: #ffffff;
+  height: auto;
+  background-image: linear-gradient(to bottom, #fff1eb, #ace0f9);
+  background-size: cover;
 }
 
 .tab-cont {
   display: 'flex';
   flex-direction: row;
   column-count: 4;
-  justify-content: space-between;
+  justify-content: space-around;
   padding: 5px;
   flex-wrap: wrap;
   list-style-type: none;
+  max-width: 320px;
 }
 
 .app-cont {
   display: 'flex';
   flex-direction: row;
-  column-count: 4;
-  justify-content: 'space-between';
   padding: 5px;
   list-style-type: none;
   max-width: 320px;
+  justify-content: space-around;
+}
+
+.input-cont {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: transparent;
+  border: 2px solid #7b8794;
+
+  color: #dfe2e5;
+
+  max-width: 40%;
+  height: 50px;
+}
+.heading {
+  color: #1e293b;
+  font-family: 'Bree Serif';
+  font-size: 36px;
+  font-weight: bold;
+  padding: 2px;
+}
+.image {
+  width: 40px;
+  height: 40px;
+  padding-right: 3px;
+  padding: 3px;
+  padding-top: 8px;
+}
+
+.input {
+  border: none;
+  font-family: 'Roboto';
+  font-size: 16px;
+  font-weight: bold;
+  background-color: transparent;
+  padding-left: 3px;
 }
