--- a/src/components/AppItem/index.css
+++ b/src/components/AppItem/index.css
@@ -1,16 +1,24 @@
 /* Write your CSS here */
 .app {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   background-color: #ffffff;
   border-radius: 5px;
   padding: 5px;
-
-  margin: 2px;
+  margin: 5px;
+  max-width: 35%;
+  flex-wrap: wrap;
 }
 
 .image {
   height: 80px;
   width: 70px;
+}
+
+.app-name {
+  font-family: 'Bree Serif';
+  font-size: 18px;
+  font-weight: bold;
+  padding: 2px;
 }
